apps/stalwart/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stalwart-internal
  namespace: manafishrov-stalwart
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
    - name: public
      namespace: gateway
      sectionName: https
  hostnames:
    - mail.manafishrov.com
  rules:
    - backendRefs:
        - name: stalwart-internal
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stalwart-mta-sts
  namespace: manafishrov-stalwart
spec:
  parentRefs:
    - name: public
      namespace: gateway
      sectionName: https
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - mta-sts.manafishrov.com
  rules:
    - matches:
        - path:
            type: Exact
            value: /.well-known/mta-sts.txt
      backendRefs:
        - name: stalwart-internal
          port: 8080
